--- a/styles/cards.css
+++ b/styles/cards.css
@@ -6,4 +6,9 @@
     & h3 {
         margin-top: 1rem;
     }
+
+    & .premium {
+        border: none;
+        background: var(--surface-color);
+    }
 }
